chore: update package name to @solomonmarvel97/gitcommitmessage
Update the package name in package.json to use the scoped format, preparing for registry publication under the user namespace.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitcommitmessage",
+  "name": "@solomonmarvel97/gitcommitmessage",
   "version": "0.3.0",
   "description": "Generate intelligent commit messages from git status using Google Gemini AI",
   "keywords": [
